Move trapezoidal profiles around